Update npm dependencies and regenerate package-lock.json

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "bitedit",
   "version": "1.0.0",
   "description": "A web-based editor for viewing, modifying, and patching MonetizationVars files for BitLife.",
-  "main": "index.js",
+  "main": "BitEdit/index.html",
   "scripts": {
+    "build:css": "tailwindcss -i ./BitEdit/input.css -o ./BitEdit/output.css --minify",
+    "watch:css": "tailwindcss -i ./BitEdit/input.css -o ./BitEdit/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,10 +20,9 @@
   },
   "homepage": "https://github.com/S0methingSomething/BitEdit#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4"
-  },
-  "dependencies": {
+    "@tailwindcss/cli": "^4.1.8",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "tailwindcss": "^4.1.8"
   }
 }
