--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,4 +1,4 @@
-name: Build Tailwind, Deploy BitEdit, and Update Version Files
+name: Build Tailwind, Deploy BitEdit, and Update Files
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write   # To push updated version files
+  contents: write   # To push updated version files and output.css
   pages: write      # To deploy to GitHub Pages
   id-token: write   # For OIDC token for GitHub Pages deployment
 
@@ -21,7 +21,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build_deploy_and_commit_version:
+  build_deploy_and_commit:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -40,17 +40,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: List node_modules/.bin (for debugging)
-        run: ls -la node_modules/.bin || echo "node_modules/.bin not found or empty after npm ci"
-
-      - name: Verify @tailwindcss/cli version (for debugging)
-        run: npx --no -- @tailwindcss/cli --help || echo "@tailwindcss/cli not found or --help failed"
-
       - name: Build Tailwind CSS
-        run: npx --no -- @tailwindcss/cli -i ./BitEdit/tailwind/input.css -o ./BitEdit/output.css --minify
-        # Input: ./BitEdit/tailwind/input.css
-        # Output: ./BitEdit/output.css
-        # Config files (tailwind.config.js, postcss.config.js) are expected at the repo root.
+        run: npx @tailwindcss/cli -i ./BitEdit/tailwind/input.css -o ./BitEdit/output.css --minify
 
       - name: Extract version from BitEdit/index.html
         id: get_version
@@ -65,11 +56,8 @@ jobs:
           
           if [ -z "$VERSION_STRING" ]; then
             echo "Error: Version string not found or invalid format in $INDEX_FILE_PATH."
-            echo "Searched for pattern: const CURRENT_APP_VERSION = \"...version...\""
-            echo "Line processed by sed: $VERSION_LINE"
             exit 1
           fi
-          echo "Extracted version (original): $VERSION_STRING"
           echo "version_original=$VERSION_STRING" >> "$GITHUB_OUTPUT"
 
       - name: Normalize version string for CACHE_NAME
@@ -77,56 +65,21 @@ jobs:
         run: |
           RAW_VERSION="${{ steps.get_version.outputs.version_original }}"
           NORMALIZED_VERSION=$(echo "$RAW_VERSION" | sed 's/^v//') 
-          echo "Normalized version for CACHE_NAME: $NORMALIZED_VERSION"
           echo "value=$NORMALIZED_VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Create/Update BitEdit_version.txt locally
-        id: update_version_txt
         run: |
-          VERSION_TO_WRITE="${{ steps.get_version.outputs.version_original }}"
-          VERSION_FILE_PATH="BitEdit/BitEdit_version.txt" 
-          
-          mkdir -p "$(dirname "$VERSION_FILE_PATH")"
-          
-          CURRENT_CONTENT=""
-          if [ -f "$VERSION_FILE_PATH" ]; then
-            CURRENT_CONTENT=$(cat "$VERSION_FILE_PATH")
-          fi
-
-          if [ "$CURRENT_CONTENT" != "$VERSION_TO_WRITE" ]; then
-            echo "BitEdit_version.txt: Content changed. Writing '$VERSION_TO_WRITE'."
-            echo "$VERSION_TO_WRITE" > "$VERSION_FILE_PATH"
-            echo "changed=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "BitEdit_version.txt is already up to date with '$VERSION_TO_WRITE'."
-            echo "changed=false" >> "$GITHUB_OUTPUT"
-          fi
+          echo "${{ steps.get_version.outputs.version_original }}" > BitEdit/BitEdit_version.txt
 
       - name: Update CACHE_NAME in sw.js locally
-        id: update_sw_js
         run: |
-          NORMALIZED_VERSION="${{ steps.normalize_version.outputs.value }}"
           SW_FILE_PATH="BitEdit/sw.js"
-          
           if [ ! -f "$SW_FILE_PATH" ]; then
             echo "Error: $SW_FILE_PATH not found."
             exit 1
           fi
-
-          cp "$SW_FILE_PATH" "${SW_FILE_PATH}.orig"
-          
-          # This sed command finds the line after GITHUB_ACTION_MARKER_SW_CACHE_NAME
-          # and replaces the content of '...' in "const CACHE_NAME = '...';"
-          sed -E -i.bak "/\/\/ GITHUB_ACTION_MARKER_SW_CACHE_NAME/{n;s/(const CACHE_NAME = *')[^']*(' *;.*)/\1${NORMALIZED_VERSION}\2/;}" "$SW_FILE_PATH"
-          
-          if ! cmp -s "${SW_FILE_PATH}.bak" "$SW_FILE_PATH"; then
-            echo "sw.js: CACHE_NAME updated to '${NORMALIZED_VERSION}'"
-            echo "changed=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "sw.js: CACHE_NAME already up to date or sed command did not modify the file."
-            echo "changed=false" >> "$GITHUB_OUTPUT"
-          fi
-          rm -f "${SW_FILE_PATH}.bak" # Clean up backup file from sed -i
+          sed -i.bak -E "/\/\/ GITHUB_ACTION_MARKER_SW_CACHE_NAME/{n;s/(const CACHE_NAME = *')[^']*(' *;.*)/\1${{ steps.normalize_version.outputs.value }}\2/;}" "$SW_FILE_PATH"
+          rm -f "${SW_FILE_PATH}.bak"
 
       - name: Setup Pages
         id: pages
@@ -135,39 +88,28 @@ jobs:
       - name: Upload artifact for deployment
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './BitEdit' # This directory now includes locally modified/generated files
+          path: './BitEdit'
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
 
-      - name: Commit and push changed version files
-        if: success() && (steps.update_version_txt.outputs.changed == 'true' || steps.update_sw_js.outputs.changed == 'true')
+      - name: Commit and push generated files
+        if: success()
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           
-          FILES_TO_COMMIT=""
-          COMMIT_MESSAGE_DETAILS=""
-
-          if [ "${{ steps.update_version_txt.outputs.changed }}" == "true" ]; then
-            git add BitEdit/BitEdit_version.txt
-            FILES_TO_COMMIT="BitEdit/BitEdit_version.txt"
-            COMMIT_MESSAGE_DETAILS="BitEdit_version.txt"
-          fi
-
-          if [ "${{ steps.update_sw_js.outputs.changed }}" == "true" ]; then
-            git add BitEdit/sw.js
-            if [ -n "$FILES_TO_COMMIT" ]; then
-              FILES_TO_COMMIT="$FILES_TO_COMMIT and BitEdit/sw.js"
-              COMMIT_MESSAGE_DETAILS="$COMMIT_MESSAGE_DETAILS, sw.js CACHE_NAME"
-            else
-              FILES_TO_COMMIT="BitEdit/sw.js"
-              COMMIT_MESSAGE_DETAILS="sw.js CACHE_NAME"
-            fi
-          fi
+          # Add all potentially generated or modified files to the staging area.
+          # This includes the newly built CSS and any updated version files.
+          git add BitEdit/output.css BitEdit/BitEdit_version.txt BitEdit/sw.js
           
-          echo "Committing changes to: $FILES_TO_COMMIT"
-          git commit -m "docs: Update $COMMIT_MESSAGE_DETAILS to ${{ steps.get_version.outputs.version_original }} [skip ci]"
-          git push
-          echo "Version files updated and pushed to repository."
+          # Check for staged changes. If there are changes, commit and push.
+          if ! git diff --staged --quiet; then
+            echo "Detected changes in generated files. Committing..."
+            git commit -m "build: Update generated files [skip ci]" -m "This commit includes the latest Tailwind CSS build (output.css) and any version updates."
+            git push
+            echo "Pushed updated generated files to the repository."
+          else
+            echo "No changes in generated files to commit."
+          fi
