--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "A web-based editor for viewing, modifying, and patching MonetizationVars files for BitLife.",
   "scripts": {
-    "build": "npx tailwindcss -i ./src/css/input.css -o ./dist/output.css --minify",
-    "dev": "npx tailwindcss -i ./src/css/input.css -o ./dist/output.css --watch"
+    "build:css": "tailwindcss -i ./src/css/input.css -o ./dist/output.css",
+    "copy:assets": "cpy public/**/* dist",
+    "build": "mkdir -p dist && npm run build:css && npm run copy:assets",
+    "dev": "npm run build && live-server dist/",
+    "watch": "npm-run-all --parallel watch:*",
+    "watch:css": "tailwindcss -i ./src/css/input.css -o ./dist/output.css --watch",
+    "watch:assets": "onchange 'public/**/*' -- npm run copy:assets"
   },
   "repository": {
     "type": "git",
@@ -20,8 +25,10 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.8",
     "autoprefixer": "^10.4.19",
+    "cpy-cli": "^5.0.0",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^3.2.7"
   }
 }
-
