--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -6,9 +6,9 @@ on:
     paths:
       - 'BitEdit/index.html'         # For version extraction
       - 'BitEdit/tailwind/input.css' # Path to your main Tailwind input CSS
-      - 'tailwind.config.js'       # Assumed to be at the root
-      - 'postcss.config.js'        # Assumed to be at the root
-      - 'BitEdit/**/*.js'          # If other JS files influence Tailwind classes
+      - 'tailwind.config.js'         # Assumed to be at the root
+      - 'postcss.config.js'          # Assumed to be at the root
+      - 'BitEdit/**/*.js'            # If other JS files influence Tailwind classes
   workflow_dispatch:
 
 permissions:
@@ -34,7 +34,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' 
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
@@ -64,7 +64,7 @@ jobs:
         id: normalize_version
         run: |
           RAW_VERSION="${{ steps.get_version.outputs.version_original }}"
-          NORMALIZED_VERSION=$(echo "$RAW_VERSION" | sed 's/^v//') 
+          NORMALIZED_VERSION=$(echo "$RAW_VERSION" | sed 's/^v//')
           echo "value=$NORMALIZED_VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Create/Update BitEdit_version.txt locally
@@ -81,6 +81,7 @@ jobs:
           sed -i.bak -E "/\/\/ GITHUB_ACTION_MARKER_SW_CACHE_NAME/{n;s/(const CACHE_NAME = *')[^']*(' *;.*)/\1${{ steps.normalize_version.outputs.value }}\2/;}" "$SW_FILE_PATH"
           rm -f "${SW_FILE_PATH}.bak"
 
+      # ---------- GitHub Pages deployment (unchanged) ----------
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
@@ -94,17 +95,33 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+      # ---------- Cloudflare Pages deployment via Wrangler ----------
+      # One-time setup: create the Pages project if it doesn't exist.
+      # Set the project name in repository variables as CLOUDFLARE_PAGES_BEDIT_PROJECT (e.g., "bitedit").
+      - name: Create Cloudflare Pages project if missing
+        uses: cloudflare/wrangler-action@v3
+        continue-on-error: true
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          wranglerVersion: '4'
+          command: pages project create ${{ vars.CLOUDFLARE_PAGES_BEDIT_PROJECT }} --production-branch main
+
+      - name: Deploy BitEdit to Cloudflare Pages (production)
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          wranglerVersion: '4'
+          command: pages deploy BitEdit --project-name ${{ vars.CLOUDFLARE_PAGES_BEDIT_PROJECT }} --production --commit-dirty=true
+
+      # ---------- Commit generated files back to repo ----------
       - name: Commit and push generated files
         if: success()
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          
-          # Add all potentially generated or modified files to the staging area.
-          # This includes the newly built CSS and any updated version files.
           git add BitEdit/output.css BitEdit/BitEdit_version.txt BitEdit/sw.js
-          
-          # Check for staged changes. If there are changes, commit and push.
           if ! git diff --staged --quiet; then
             echo "Detected changes in generated files. Committing..."
             git commit -m "build: Update generated files [skip ci]" -m "This commit includes the latest Tailwind CSS build (output.css) and any version updates."
