--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -52,7 +52,7 @@ jobs:
             exit 1
           fi
           VERSION_LINE=$(grep 'GITHUB_ACTION_MARKER_APP_VERSION' -A 1 "$INDEX_FILE_PATH" | tail -n1)
-          VERSION_STRING=$(echo "$VERSION_LINE" | sed -n 's/.*CURRENT_APP_VERSION[[:space:]]*=[[:space:]]*"\([^"]*\)".*/\1/p')
+          VERSION_STRING=$(echo "$VERSION_LINE" | sed -n 's/.*CURRENT_APP_VERSION[[:space:]]*=[[:space:]]*"$$[^"]*$$".*/\1/p')
           
           if [ -z "$VERSION_STRING" ]; then
             echo "Error: Version string not found or invalid format in $INDEX_FILE_PATH."
@@ -81,7 +81,7 @@ jobs:
           sed -i.bak -E "/\/\/ GITHUB_ACTION_MARKER_SW_CACHE_NAME/{n;s/(const CACHE_NAME = *')[^']*(' *;.*)/\1${{ steps.normalize_version.outputs.value }}\2/;}" "$SW_FILE_PATH"
           rm -f "${SW_FILE_PATH}.bak"
 
-      # ---------- GitHub Pages deployment (unchanged) ----------
+      # ---------- GitHub Pages deployment ----------
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
@@ -97,7 +97,7 @@ jobs:
 
       # ---------- Cloudflare Pages deployment via Wrangler ----------
       # One-time setup: create the Pages project if it doesn't exist.
-      # Set the project name in repository variables as CLOUDFLARE_PAGES_BEDIT_PROJECT (e.g., "bitedit").
+      # Uses repository variable CLOUDFLARE_PAGES_PROJECT (e.g., "bitguides" or "bitedit").
       - name: Create Cloudflare Pages project if missing
         uses: cloudflare/wrangler-action@v3
         continue-on-error: true
@@ -105,7 +105,7 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           wranglerVersion: '4'
-          command: pages project create ${{ vars.CLOUDFLARE_PAGES_BEDIT_PROJECT }} --production-branch main
+          command: pages project create ${{ vars.CLOUDFLARE_PAGES_PROJECT }} --production-branch main
 
       - name: Deploy BitEdit to Cloudflare Pages (production)
         uses: cloudflare/wrangler-action@v3
@@ -113,7 +113,7 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           wranglerVersion: '4'
-          command: pages deploy BitEdit --project-name ${{ vars.CLOUDFLARE_PAGES_BEDIT_PROJECT }} --production --commit-dirty=true
+          command: pages deploy BitEdit --project-name ${{ vars.CLOUDFLARE_PAGES_PROJECT }} --production --commit-dirty=true
 
       # ---------- Commit generated files back to repo ----------
       - name: Commit and push generated files
@@ -124,9 +124,4 @@ jobs:
           git add BitEdit/output.css BitEdit/BitEdit_version.txt BitEdit/sw.js
           if ! git diff --staged --quiet; then
             echo "Detected changes in generated files. Committing..."
-            git commit -m "build: Update generated files [skip ci]" -m "This commit includes the latest Tailwind CSS build (output.css) and any version updates."
-            git push
-            echo "Pushed updated generated files to the repository."
-          else
-            echo "No changes in generated files to commit."
-          fi
+            git commit -m "build: Update generated files [skip ci]" -m "This commit includes the latest Tailwind CSS build (output.css) and any version
