--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -138,113 +138,4 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CF_PROJECT: ${{ vars.CLOUDFLARE_PAGES_PROJECT }}
         run: |
-          set -euo      - name: Install dependencies
-        run: npm ci
-
-      - name: Build Tailwind CSS
-        run: npx @tailwindcss/cli -i ./BitEdit/tailwind/input.css -o ./BitEdit/output.css --minify
-
-      - name: Extract version from BitEdit/index.html
-        id: get_version
-        run: |
-          INDEX_FILE_PATH="BitEdit/index.html"
-          if [ ! -f "$INDEX_FILE_PATH" ]; then
-            echo "Error: $INDEX_FILE_PATH not found."
-            exit 1
-          fi
-          VERSION_LINE=$(grep 'GITHUB_ACTION_MARKER_APP_VERSION' -A 1 "$INDEX_FILE_PATH" | tail -n1)
-          VERSION_STRING=$(echo "$VERSION_LINE" | sed -n 's/.*CURRENT_APP_VERSION[[:space:]]*=[[:space:]]*"\([^"]*\)".*/\1/p')
-          
-          if [ -z "$VERSION_STRING" ]; then
-            echo "Error: Version string not found or invalid format in $INDEX_FILE_PATH."
-            exit 1
-          fi
-          echo "version_original=$VERSION_STRING" >> "$GITHUB_OUTPUT"
-
-      - name: Normalize version string for CACHE_NAME
-        id: normalize_version
-        run: |
-          RAW_VERSION="${{ steps.get_version.outputs.version_original }}"
-          NORMALIZED_VERSION=$(echo "$RAW_VERSION" | sed 's/^v//')
-          echo "value=$NORMALIZED_VERSION" >> "$GITHUB_OUTPUT"
-
-      - name: Create/Update BitEdit_version.txt locally
-        run: |
-          echo "${{ steps.get_version.outputs.version_original }}" > BitEdit/BitEdit_version.txt
-
-      - name: Update CACHE_NAME in sw.js locally
-        run: |
-          SW_FILE_PATH="BitEdit/sw.js"
-          if [ ! -f "$SW_FILE_PATH" ]; then
-            echo "Error: $SW_FILE_PATH not found."
-            exit 1
-          fi
-          sed -i.bak -E "/\/\/ GITHUB_ACTION_MARKER_SW_CACHE_NAME/{n;s/(const CACHE_NAME = *')[^']*(' *;.*)/\1${{ steps.normalize_version.outputs.value }}\2/;}" "$SW_FILE_PATH"
-          rm -f "${SW_FILE_PATH}.bak"
-
-      # Publish BitEdit/ to gh-pages branch (GitHub Pages -> Settings → Pages → Deploy from a branch → gh-pages)
-      - name: Publish BitEdit to gh-pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          folder: BitEdit
-          clean: true
-          single-commit: true
-          commit-message: "deploy: BitEdit ${{ steps.get_version.outputs.version_original }}"
-
-      # Ensure Cloudflare Pages project exists; create it if missing
-      - name: Ensure Cloudflare Pages project exists
-        env:
-          CF_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CF_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          CF_PROJECT: ${{ vars.CLOUDFLARE_PAGES_PROJECT }}
-        run: |
-          set -euo pipefail
-          if [ -z "${CF_API_TOKEN:-}" ] || [ -z "${CF_ACCOUNT_ID:-}" ] || [ -z "${CF_PROJECT:-}" ]; then
-            echo "Missing Cloudflare config. Set secrets CLOUDFLARE_API_TOKEN, CLOUDFLARE_ACCOUNT_ID and variable CLOUDFLARE_PAGES_PROJECT."
-            exit 1
-          fi
-          BASE_URL="https://api.cloudflare.com/client/v4/accounts/${CF_ACCOUNT_ID}/pages/projects"
-
-          # Check if project exists
-          STATUS=$(curl -sS -w "%{http_code}" -o /tmp/cf_get.json \
-            -H "Authorization: Bearer ${CF_API_TOKEN}" \
-            "${BASE_URL}/${CF_PROJECT}")
-
-          if [ "$STATUS" = "200" ]; then
-            echo "Cloudflare Pages project '${CF_PROJECT}' exists."
-          elif [ "$STATUS" = "404" ]; then
-            echo "Project '${CF_PROJECT}' not found. Creating..."
-            CREATE_STATUS=$(curl -sS -w "%{http_code}" -o /tmp/cf_create.json \
-              -H "Authorization: Bearer ${CF_API_TOKEN}" \
-              -H "Content-Type: application/json" \
-              -X POST "${BASE_URL}" \
-              --data "{\"name\":\"${CF_PROJECT}\",\"production_branch\":\"main\"}")
-
-            if [ "$CREATE_STATUS" != "200" ] && [ "$CREATE_STATUS" != "201" ]; then
-              echo "Failed to create Cloudflare Pages project '${CF_PROJECT}'. HTTP $CREATE_STATUS. Response:"
-              cat /tmp/cf_create.json
-              exit 1
-            fi
-            echo "Created Cloudflare Pages project '${CF_PROJECT}'."
-            sleep 2
-          else
-            echo "Unexpected response when checking project (HTTP $STATUS):"
-            cat /tmp/cf_get.json || true
-            exit 1
-          fi
-
-      # Deploy BitEdit/ to Cloudflare Pages (production)
-      - name: Deploy to Cloudflare Pages (production)
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          CF_PROJECT: ${{ vars.CLOUDFLARE_PAGES_PROJECT }}
-        run: |
-          set -euo pipefail
-          
-          # Create a deployment using wrangler or direct API
-          npx wrangler@latest pages deploy BitEdit \
-            --project-name="${CF_PROJECT}" \
-            --compatibility-date="2024-01-01"
+          set -euo
