--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Astro, GitHub Pages + Cloudflare Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: ["feature-astro-migration-2"]
     paths:
       - 'src/**'
       - 'public/**'
